--- a/ar/faqs.html
+++ b/ar/faqs.html
@@ -359,7 +359,7 @@
         <div class="row d-flex justify-content-center align-items-center">
           <div class="col-xl-10">
             <div class="row d-flex justify-content-center align-items-center">
-              <div class="col-xl-8 col-lg-6 col-md-8 py-4">
+              <div class="col-xl-6 col-xxl-8 col-lg-6 col-md-8 py-4">
 
                 <div class="accordion accordion-flush">
                   <div class="accordion-item mb-1 border-0">
@@ -389,7 +389,7 @@
                 </div>
 
               </div>
-              <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
+              <div class="col-xl-6 col-xxl-4 col-lg-6 col-md-4 reference-bg-logo-none">
                 <div class="row d-flex justify-content-center align-items-center">
                   <div class="col-6 col-md-8 col-lg-8 col-xl-6 py-md-5">
                     <div class="logo-block py-5 my-xl-5 opacity-lg-0">
